--- a/composer.json
+++ b/composer.json
@@ -57,10 +57,5 @@
         "preferred-install": "dist",
         "sort-packages": true
     },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
-        "post-install-cmd": [
-        "php artisan clear-compiled",
-        "chmod -R 777 public/"
-    ]
+    "minimum-stability": "dev"
 }
